Implement upload dish image to GCP storage  (#15)
* Refactor dish management handlers: split into separate files for create, read, update, delete, and search functionalities; implement file upload to Google Cloud Storage for dish images; update main.go to integrate new handlers and environment variable loading.

* Remove test upload.

* Fixed env file.

* Fixed main.go
